Change names of the supervisor app and domain name in apache.conf

--- a/deploy/apache.conf
+++ b/deploy/apache.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-    ServerName {{ project_name }}.dev
+    ServerName {{ project_name }}.com
     ProxyPreserveHost On
     Alias /static/ /home/apps/{{ project_name }}/assets/
     LogLevel info
