--- a/deploy/supervisor.conf
+++ b/deploy/supervisor.conf
@@ -5,7 +5,7 @@ command = /home/apps/{{ project_name }}/env/bin/python manage.py celery worker -
 redirect_stderr = true
 stdout_logfile = /home/apps/{{ project_name }}/var/log/celery.log
 
-[program:{{ project_name }}_www]
+[program:{{ project_name }}]
 directory = /home/apps/{{ project_name }}/application
 user = www-data
 command = /home/apps/{{ project_name }}/env/bin/gunicorn -cconf/gunicorn.py wsgi:application
