--- a/deploy/requirements.txt
+++ b/deploy/requirements.txt
@@ -10,17 +10,20 @@ django-filter
 django-guardian
 #django-ipware
 django-oauth-toolkit
+#django-organizations
 #django-passwords
 django-redis-cache
 django-registration-redux
-#django-taggit
-#django-taggit-templatetags
+django-taggit
+django-taggit-templatetags
 django-template-debug
 djangorestframework
 djangorestframework-camel-case
 django-rest-swagger
+-e git+https://github.com/sprymak/django-whatever.git@2afc81ba29f0e59ae6296b5e9f32e4254c6a7dd5#egg=django_whatever-master
 easy-thumbnails
 gunicorn
+metacorus-django-utils
 setproctitle
 jsmin
 pillow
